force-app/main/default/objects/OrderDetail__c/OrderDetail__c.object-meta.xml
<CustomObject>
    <label>受注明細</label>
    <nameField>
        <displayFormat>OD{YYYY}{MM}-{000000}</displayFormat>
        <label>オブジェクトID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>