force-app/main/default/objects/OrderDetail__c/fields/DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountPrice__c</fullName>
    <label>会員割引額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>