force-app/main/default/objects/OrderDetail__c/fields/DlCount__c.field-meta.xml
<CustomField>
    <fullName>DlCount__c</fullName>
    <label>ダウンロード回数</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>