force-app/main/default/objects/OrderDetail__c/fields/DlLimit__c.field-meta.xml
<CustomField>
    <fullName>DlLimit__c</fullName>
    <label>ダウンロード有効期限</label>
    <type>DateTime</type>
</CustomField>