force-app/main/default/objects/OrderDetail__c/fields/DlUrl__c.field-meta.xml
<CustomField>
    <fullName>DlUrl__c</fullName>
    <label>ダウンロードURL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>