force-app/main/default/objects/OrderDetail__c/fields/FlgRealTime__c.field-meta.xml
<CustomField>
    <fullName>FlgRealTime__c</fullName>
    <label>リアルタイムオプションフラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>