force-app/main/default/objects/OrderDetail__c/fields/ItemPropertyCode__c.field-meta.xml
<CustomField>
    <fullName>ItemPropertyCode__c</fullName>
    <label>購入時の商品バリエーションコード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>