force-app/main/default/objects/OrderDetail__c/fields/ItemSerialNo__c.field-meta.xml
<CustomField>
    <fullName>ItemSerialNo__c</fullName>
    <label>商品シリアル番号</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>