force-app/main/default/objects/OrderDetail__c/fields/NoCompositeKey__c.field-meta.xml
<CustomField>
    <fullName>NoCompositeKey__c</fullName>
    <externalId>true</externalId>
    <label>受注明細複合キー</label>
    <length>15</length>
    <type>Text</type>
</CustomField>