force-app/main/default/objects/OrderDetail__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>個数</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>