force-app/main/default/objects/OrderDetail__c/fields/OrderDetailNo__c.field-meta.xml
<CustomField>
    <fullName>OrderDetailNo__c</fullName>
    <label>受注明細番号</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>