force-app/main/default/objects/OrderDetail__c/fields/OrderDetails__c.field-meta.xml
<CustomField>
    <fullName>OrderDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>受注</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>受注明細</relationshipLabel>
    <relationshipName>OrderDetails</relationshipName>
    <type>Lookup</type>
</CustomField>