force-app/main/default/objects/OrderDetail__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>購入時の値段</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>