force-app/main/default/objects/OrderDetail__c/listViews/alldetail.listView-meta.xml
<ListView>
    <fullName>alldetail</fullName>
    <columns>NAME</columns>
    <columns>ItemName__c</columns>
    <columns>OrderNo__c</columns>
    <columns>OrderDetails__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべての受注明細</label>
</ListView>